--- a/plugins/AdvancedBanX/Messages.yml
+++ b/plugins/AdvancedBanX/Messages.yml
@@ -3,7 +3,7 @@
 # Legacy (&/§) formatting is not supported and will cause errors
 
 General:
-  Prefix: "<bold><red>AdvancedBanX</red> <dark_gray>»</dark_gray></bold>"
+  Prefix: "<bold><red>AdvancedBanX</red></bold> <dark_gray>»</dark_gray>"
   NoPerms: "<red>Du hast hierfür keine Berechtigung!</red>"
   LayoutNotFound: "<red>Es gibt kein Layout \"%NAME%\"</red>"
   # This will be the replacement for the %DURATION% variable
