--- a/plugins/LuckPerms/yaml-storage/groups/perms.pluginmanager.yml
+++ b/plugins/LuckPerms/yaml-storage/groups/perms.pluginmanager.yml
@@ -1,6 +1,9 @@
 name: perms.pluginmanager
 permissions:
+- ab.*
 - lp.*
+- luckperms.*
 - minecraft.*
+- ultimateteams.*
 - worldedit.*
 - worldguard.*
