--- a/plugins/LuckPerms/yaml-storage/groups/rang.mod.yml
+++ b/plugins/LuckPerms/yaml-storage/groups/rang.mod.yml
@@ -2,5 +2,5 @@ name: rang.mod
 parents:
 - perms.moderation
 suffixes:
-- ' &8[&#841B99ᴍ&#9A1DCCᴏ&#B01EFFᴅ&8]':
+- ' &8[&#841B99&lᴍ&#9A1DCC&lᴏ&#B01EFF&lᴅ&8]':
     priority: 100
