--- a/plugins/TAB/groups.yml
+++ b/plugins/TAB/groups.yml
@@ -12,12 +12,12 @@ example_group:
 
  # default settings for all groups, all groups will take properties from this section unless player's primary group overrides a specific setting
 _DEFAULT_:
-  tabprefix: "%luckperms-prefix%"
-  tagprefix: "%luckperms-prefix%"
+  tabprefix: "&l%changeoutput_equals_input:{ultimateteams_teamPrefix}_matcher:Not in a team_ifmatch:_else:{ultimateteams_teamPrefix} %&r"
+  tagprefix: "&l%ultimateteams_teamPrefix%&r "
   customtabname: "%player%"
   customtagname: "%player%" # don't forget to enable unlimited nametag mode to make this one work
-  tabsuffix: "%luckperms-suffix%"
-  tagsuffix: "%luckperms-suffix%"
+  tabsuffix: " %luckperms-suffix%"
+  tagsuffix: " %luckperms-suffix%"
 
 per-world:
   world1:
