--- a/plugins/AdvancedBanX/Messages.yml
+++ b/plugins/AdvancedBanX/Messages.yml
@@ -18,18 +18,18 @@ Ban:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/ban (-s) [Name] [Reason/@Layout]</italic></gray>"
   Done: "<italic><red>%NAME%</red></italic> <gray>wurde erfolgreich gebannt!</gray>"
   AlreadyDone: "<italic><red>%NAME%</red></italic> <gray>ist bereits gebannt!</gray>"
-  Exempt: "<gray>Du kannst <red><italic>%NAME%</italic></red> nicht bannen!</gray>"
+  Exempt: "<gray>Du kannst <red>%NAME%</red> nicht bannen!</gray>"
   Layout:
-    - '%PREFIX% <gray>Permanennt gebannt</gray>'
+    - '%PREFIX% <gray>Permanent gebannt</gray>'
     - ''
     - ''
     - "<red>Grund <dark_gray>»</dark_gray></red> <gray>%REASON%</gray>"
     - ''
-    - 'Setze dich bei Fragen oder Problemen mit dem Team in Kontakt'
+    - '<dark_gray>Setze dich bei Fragen oder Problemen mit dem Team in Kontakt</dark_gray>'
   Notification:
-    - "<red><italic>%NAME%</italic></red> <gray>wurde von <yellow><italic>%OPERATOR%<italic></yellow>gebannt</gray>"
+    - "<red>%NAME%</red> <gray>wurde von <yellow><italic>%OPERATOR%<italic></yellow>gebannt</gray>"
     - "<gray>For the reason <italic>%REASON%</italic></gray>"
-  UndoNotification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>hat <red><italic>%NAME%</italic></red>unbanned</gray>"
+  UndoNotification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>hat <red>%NAME%</red>unbanned</gray>"
 
 Tempban:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/tempban (-s) [Name] [Xmo/Xd/Xh/Xm/Xs/#TimeLayout] [Reason/@Layout]</italic></gray>"
@@ -42,7 +42,7 @@ Tempban:
     - "<red>Dauer <dark_gray>»</dark_gray></red> <gray>%DURATION%</gray>"
     - ''
   Notification:
-    - "<red><italic>%NAME%</italic></red> <gray>wurde durch <yellow><italic>%OPERATOR%<italic></yellow> gebannt</gray>"
+    - "<red>%NAME%</red> <gray>wurde durch <yellow><italic>%OPERATOR%<italic></yellow> gebannt</gray>"
     - "<gray>Für den Grund <italic>%REASON%</italic></gray>"
     - "<gray><italic>Dieser Spieler wurde für <yellow>%DURATION%</yellow></italic> gebannt</gray>"
 
@@ -58,7 +58,7 @@ Ipban:
     - "<yellow>TS-Ip <dark_gray>»</dark_gray></yellow> <red><underlined>coming soon</underlined></red>"
     - "<yellow>Forum <dark_gray>»</dark_gray></yellow> <red><underlined>coming soon</underlined></red>"
   Notification:
-    - "<red><italic>%NAME%</italic></red> <gray>got banned by</gray> <yellow><italic>%OPERATOR%<italic></yellow>"
+    - "<red>%NAME%</red> <gray>got banned by</gray> <yellow><italic>%OPERATOR%<italic></yellow>"
     - "<gray>For the reason <italic>%REASON%</italic></gray>"
   IpNotCashed: "<red>There is no saved IP for <italic>%NAME%!</italic></red>"
 
@@ -76,20 +76,20 @@ Tempipban:
     - "<yellow>TS-Ip <dark_gray>»</dark_gray></yellow> <red><underlined>coming soon</underlined></red>"
     - "<yellow>Forum <dark_gray>»</dark_gray></yellow> <red><underlined>coming soon</underlined></red>"
   Notification:
-    - "<red><italic>%NAME%</italic></red> <gray>got banned by</gray> <yellow><italic>%OPERATOR%<italic></yellow>"
+    - "<red>%NAME%</red> <gray>got banned by</gray> <yellow><italic>%OPERATOR%<italic></yellow>"
     - "<gray>For the reason <italic>%REASON%</italic></gray>"
     - "<gray><italic>This player got banned for <yellow>DURATION%</yellow></italic></gray>"
 
 Mute:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/mute (-s) [Name] [Reason/@Layout]</italic></gray>"
-  Done: "<red><italic>%NAME%</italic></red> <gray>was successfully muted!</gray>"
-  AlreadyDone: "<red><italic>%NAME%</italic></red> <gray>has already been muted!</gray>"
-  Exempt: "<gray>You are not able to mute <red><italic>%NAME%</italic></red>"
+  Done: "<red>%NAME%</red> <gray>was successfully muted!</gray>"
+  AlreadyDone: "<red>%NAME%</red> <gray>has already been muted!</gray>"
+  Exempt: "<gray>You are not able to mute <red>%NAME%</red>"
   Layout:
     - '%PREFIX% <gray>You are permanently muted</gray>'
     - "<red>Reason <dark_gray>»</dark_gray></red> <gray>%REASON%</gray>"
   Notification:
-    - "<red><italic>%NAME%</italic></red> <gray>got muted by</gray> <yellow><italic>%OPERATOR%</italic></yellow>"
+    - "<red>%NAME%</red> <gray>got muted by</gray> <yellow><italic>%OPERATOR%</italic></yellow>"
     - "<gray>For the reason <italic>%REASON%</italic></gray>"
   UndoNotification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>unmuted</gray> <red><bold>%NAME%</bold></red>"
 
@@ -100,26 +100,26 @@ Tempmute:
     - '%PREFIX% <gray>You are muted for %DURATION%</gray>'
     - "<red>Reason <dark_gray>»</dark_gray></red> <gray>%REASON%</gray>"
   Notification:
-    - "<red><italic>%NAME%</italic></red> <gray>got muted by</gray> <yellow><italic>%OPERATOR%</italic></yellow>"
+    - "<red>%NAME%</red> <gray>got muted by</gray> <yellow><italic>%OPERATOR%</italic></yellow>"
     - "<gray>For the reason <italic>%REASON%</italic></gray>"
     - "<italic><gray>This player got muted for <yellow>%DURATION%</yellow></gray></italic>"
 
 Warn:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/warn (-s) [Name] [Reason/@Layout]</italic></gray>"
-  Done: "<red><italic>%NAME%</italic></red> <gray>was successfully warned!</gray>"
-  Exempt: "<gray>You are not able to warn</gray> <red><italic>%NAME%</italic></red>"
+  Done: "<red>%NAME%</red> <gray>was successfully warned!</gray>"
+  Exempt: "<gray>You are not able to warn</gray> <red>%NAME%</red>"
   Layout:
     - '%PREFIX% <red>You received a warning</red>'
     - "<red>Reason</red> <dark_gray>»</dark_gray> <gray>%REASON%</gray>"
     - '<gray>You have now <red><italic>%COUNT%</italic></red> warning(s) in total!</gray>'
   Notification:
-    - "<red><italic>%NAME%</italic></red> <gray>got warned by</gray> <yellow><italic>%OPERATOR%</italic></yellow>"
+    - "<red>%NAME%</red> <gray>got warned by</gray> <yellow><italic>%OPERATOR%</italic></yellow>"
     - "<gray>For the reason <italic>%REASON%</italic></gray>"
 
 Note:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/note (-s) [Name] [Reason]</italic></gray>"
-  Done: "<red><italic>%NAME%</italic></red> <gray>was successfully noted!</gray>"
-  Exempt: "<gray>You are not able to note</gray> <red><italic>%NAME%</italic></red>"
+  Done: "<red>%NAME%</red> <gray>was successfully noted!</gray>"
+  Exempt: "<gray>You are not able to note</gray> <red>%NAME%</red>"
   Notification:
     - "<red><italic>%NAME%<italic></red> <gray>got noted by</gray> <yellow><italic>%OPERATOR%</italic></yellow>"
     - "<gray>For the reason</gray> <italic>%REASON%</italic>"
@@ -133,53 +133,53 @@ Tempwarn:
     - "<red>It will pass in</red> <dark_gray>»</dark_gray> <yellow>%DURATION%</yellow>"
     - '<gray>You have now <red><italic>%COUNT%</italic></red> warning(s) in total!</gray>'
   Notification:
-    - "<red><italic>%NAME%</italic></red> <gray>got temp-warned by</gray> <yellow><italic>%OPERATOR%</italic></yellow>"
+    - "<red>%NAME%</red> <gray>got temp-warned by</gray> <yellow><italic>%OPERATOR%</italic></yellow>"
     - "<gray>For the reason <italic>%REASON%</italic></gray>"
     - "<gray>This warning will pass in <italic>%DURATION%</italic></gray>"
 
 Kick:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/kick (-s) [Name] [Reason/@Layout]</italic></gray>"
-  Done: "<red><italic>%NAME%</italic></red> <gray>was successfully kicked!</gray>"
-  NotOnline: "<red><italic>%NAME%</italic></red> <gray>is not online!</gray>"
-  Exempt: "<gray>You are not able to kick</gray> <red><italic>%NAME%</italic></red>"
+  Done: "<red>%NAME%</red> <gray>was successfully kicked!</gray>"
+  NotOnline: "<red>%NAME%</red> <gray>is not online!</gray>"
+  Exempt: "<gray>You are not able to kick</gray> <red>%NAME%</red>"
   Layout:
-    - '%PREFIX% <gray>You got kicked</gray>'
+    - '%PREFIX% <gray>Du wurdest gekickt!</gray>'
     - ''
-    - "<red>Reason</red> <dark_gray>»</dark_gray> <gray>%REASON%</gray>"
+    - "<red>Grund</red> <dark_gray>»</dark_gray> <gray>%REASON%</gray>"
     - ''
   Notification:
-    - "<red><italic>%NAME%</italic></red> <gray>got kicked by</gray> <yellow><italic>%OPERATOR%<italic></yellow>"
-    - "<gray>For the reason <italic>%REASON%</italic></gray>"
+    - "<red>%NAME%</red> <gray>wurde von</gray> <yellow><italic>%OPERATOR%<italic></yellow>  <gray>gekickt</gray>"
+    - "<gray>Für den Grund: <italic>%REASON%</italic></gray>"
 
 
 UnBan:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/unban [Name/IP]</italic></gray>"
-  NotPunished: "<red><italic>%NAME%</italic> is not banned!</red>"
-  Done: "<green><italic>%NAME%</italic></green> <gray>was successfully unbanned!</gray>"
-  Notification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>unbanned</gray> <red><italic>%NAME%</italic></red>"
+  NotPunished: "<red>%NAME% is not banned!</red>"
+  Done: "<green>%NAME%</green> <gray>was successfully unbanned!</gray>"
+  Notification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>unbanned</gray> <red>%NAME%</red>"
 
 UnMute:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/unmute [Name]</italic></gray>"
-  NotPunished: "<red><italic>%NAME%</italic> is not muted!</red>"
-  Done: "<green><italic>%NAME%</italic></green> <gray>was successfully unmuted!</gray>"
-  Notification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>unmuted</gray> <red><italic>%NAME%</italic></red>"
+  NotPunished: "<red>%NAME% is not muted!</red>"
+  Done: "<green>%NAME%</green> <gray>was successfully unmuted!</gray>"
+  Notification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>unmuted</gray> <red>%NAME%</red>"
 
 UnWarn:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/unwarn [ID] or /unwarn clear [Name]</italic></gray>"
   NotFound: "<red>Could not find warning #%ID%</red>"
   Done: "<gray>Warn <green><italic>#%ID%</italic></green> was successfully deleted!</gray>"
-  Notification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>unwarned</gray> <red><italic>%NAME%</italic></red>"
+  Notification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>unwarned</gray> <red>%NAME%</red>"
   Clear:
-    Empty: "<red><italic>%NAME%</italic></red> <gray>has no warnings!</gray>"
+    Empty: "<red>%NAME%</red> <gray>has no warnings!</gray>"
     Done: "<gray>Cleared <green><italic>%COUNT%</italic></green> warnings</gray>"
 
 UnNote:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/unnote [ID] or /unnote clear [Name]</italic></gray>"
   NotFound: "<red>Could not find note #%ID%</red>"
   Done: "<gray>Note <green><italic>#%ID%</italic></green> was successfully deleted!</gray>"
-  Notification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>unnoted</gray> <red><italic>%NAME%</italic></red>"
+  Notification: "<yellow><italic>%OPERATOR%</italic></yellow> <gray>unnoted</gray> <red>%NAME%</red>"
   Clear:
-    Empty: "<red><italic>%NAME%</italic></red> <gray>has no notes!</gray>"
+    Empty: "<red>%NAME%</red> <gray>has no notes!</gray>"
     Done: "<gray>Cleared <green><italic>%COUNT%</italic></green> notes</gray>"
 
 UnPunish:
@@ -291,7 +291,7 @@ ChangeReason:
 
 Check:
   Usage: "<red>Usage</red> <dark_gray>»</dark_gray> <gray><italic>/check [Name]</italic></gray>"
-  Header: "<gray>Checking <yellow><italic>%NAME%</italic></yellow> <dark_gray>(%CACHED%)</dark_gray></gray>"
+  Header: "<gray>Checking <yellow>%NAME%</yellow> <dark_gray>(%CACHED%)</dark_gray></gray>"
   UUID: "<red>UUID</red> <dark_gray>»</dark_gray> <gray>%UUID% <dark_gray>(%CACHED%)</dark_gray></gray>"
   IP: "<red>IP</red> <dark_gray>»</dark_gray> <gray>%IP% <dark_gray>(%CACHED%)</dark_gray></gray>"
   Geo: "<red>Country</red> <dark_gray>»</dark_gray> <gray>%LOCATION%</gray>"
