--- a/plugins/InvSeePlusPlus/config.yml
+++ b/plugins/InvSeePlusPlus/config.yml
@@ -5,13 +5,13 @@ tabcomplete-offline-players: true
 
 # Whether InvSee++ will let you spectate inventories of players who are offline.
 enable-offline-player-support: true
-# Whether InvSee++ will let you spectate inventories of players who never player on the server before.
+# Whether InvSee++ will let you spectate inventories of players who never played on the server before.
 enable-unknown-player-support: true
 
 # Default titles for spectator inventories.
 titles:
-  inventory: "<player>'s inventory"
-  enderchest: "<player>'s enderchest"
+  inventory: "<player>s Inventar"
+  enderchest: "<player>s Enderchest"
 
 # Default templates for spectator inventories.
 # legend:
@@ -93,4 +93,4 @@ logging:
 
 # Selects the palette of placeholders to be used in slots for armour, crafting, enchanting, anvil, merchant, loom, cartography, smithing, grindstone, stonecutter.
 # Choose one of: 'glass panes', 'icons' or 'empty'.
-placeholder-palette: 'glass panes'
+placeholder-palette: 'icons'
