--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
+*.jar
+/plugins/.paper-remapped
+
 # Environment
 .vscode
+
+# Data
+/logs
+/libraries
+/cache
+eula.txt
 
 # ------------
 # PLUGINS
